syntax = "proto3";

package b2b.erp.order;
option java_multiple_files = true;
option java_package = "com.usoft.b2b.external.erp.order.api.entity";

//采购变更单
message PurchaseChange {
    int64 pc_id = 1; //erpId
    string pc_code = 2; //采购变更单号
    string pc_purccode = 3; //采购单单号
    int64 pc_indate = 4; //单据录入日期(时间戳)
    string pc_recorder = 5; //录单人
    string pc_newpayments = 6; //新付款方式
    string pc_newcurrency = 7; //新付款币种
    float pc_newrate = 8; //新汇率
    string pc_apvendname = 9; //采购变更单原应付供应商
    string pc_newapvendname = 10; //采购变更单新应付供应商
    string pc_apvendcode = 11; //原应付供应商编号
    string pc_newapvendcode = 12; //新应付供应商编号
    string pc_description = 13; //变更内容描述
    string pc_remark = 14; //备注
    int32 pc_agreed = 15; //卖家是否同意了买家的变更请求(1,0)
    int32 pc_needvendcheck = 16; //不需要供应商确认(1表示不需要确认,0表示需要确认)
    message PurchaseChangeDetail {
        int32 pcd_detno = 1; //序号(变更单)
        int32 pcd_pddetno = 2; //采购订单明细序号
        string pcd_prodcode = 3; //
        string pcd_newprodcode = 4; //新物料编号
        double pcd_newqty = 5; //新数量
        double pcd_newprice = 6; //新含税单价
        int64 pcd_newdelivery = 7; //新交货日期(时间戳)
        float pcd_newtaxrate = 8; //新税率
        string pcd_remark = 9; //备注
    }
    repeated PurchaseChangeDetail changeDetails = 17; //变更单明细集合
}

//采购变更单供应商回复信息
message PurchaseChangeReply {
    int64 b2b_pc_id = 1; //平台采购订单变更单id
    int32 pc_agreed = 2; //供应商是否同意了我的变更请求(1,0)
    string pc_replyremark = 3; //供应商的回复备注
    string pc_code = 4; //采购变更单号
}