syntax = "proto3";

package b2b.erp.order;
option java_multiple_files = true;
option java_package = "com.usoft.b2b.external.erp.order.api.entity";

//采购单信息
message Purchase {
    string pu_code = 1;  //采购单号
	string pu_date = 2;  //单据归属日期
    int64  em_uu = 3;  //ERP单据中采购员UU号
	string em_name = 4;  //ERP单据中采购员姓名
    string em_sex = 5;  //ERP单据中采购员性别
	string em_mobile = 6;  //ERP单据中采购员电话
    string em_email = 7;  //ERP单据中采购员邮箱
	int64 ve_uu = 8;  //供应商uu
    string pu_cop = 9;  //客户公司名称
	int64 ve_contactuu = 10;  //ERP中单据供应商联系人UU
	string pu_currency = 11;  //付款币种
    float pu_rate = 12;  //汇率
	string pu_kind = 13;  // 采购类型
    string pu_payments = 14; //付款方式
	string pu_remark = 15;  //备注
    string pu_recordman = 16;  //录单人
	string pu_auditman = 17;  //审核人
	string pu_shipaddresscode = 18;  //收货地址
    string pu_receivename = 19;  //应付供应商名称
	string pu_receivecode = 20;  //应付供应商编号
    int64 pu_id = 21;  //在ERP中采购单的id
	string pu_purpose = 22;   // 用途，
    string pu_arcustcode = 23;  // 买家应收客户
	string pu_shcustcode = 24;  // 收货客户
    string pu_refcode = 25;  // 销售单号
	string pu_custcode = 26;  // 客户编号
    string pu_custname = 27;  // 客户名称
	string pu_transport = 28;  //运输方式
    int64 pu_b2bid = 29;  //在平台中采购单的id号
    message PurchaseDetail {
        string pd_code = 1; //采购单号
	    string pd_prodcode = 2; //物料编号
        double pd_qty = 3; //采购数量
        double pd_price = 4; //单价
        string pd_delivery = 5; //交货日期
        string pd_remark = 6; //备注
        float pd_rate = 7; //税率
        int32 pd_detno = 8; //序号
        string pd_factory = 9; //送货工厂
        string pd_vendspec = 10; //供应商规格
        int32 pd_beipin = 11; //备品数量
        string pd_purcvendname = 12; //终端供应商名称
        int64 pd_purcvenduu = 13; //终端供应商uu
        string pd_custpurchasecode = 14; //客户采购订单号
        int32 pd_custpurchasedetno = 15; //客户采购订单序号
        string pd_acceptcustname = 16; //收货客户
        string pd_acceptcustaddress = 17; //收货地址
        int64 pd_acceptcustuu = 18; //收货客户uu
        string pd_hasissued = 19; //是否能发货
        float pd_purcprice = 20; //终端价格
        float pd_purctaxrate = 21; //终端税率
        string pd_purccurrency = 22; //终端币别
        string pd_taxcode = 23; //税收分类编码
        string pd_billname = 24; //开票名称
        string pd_orispeccode = 25;//开票型号
        message Attach {
            int64 fp_id = 1; //id
            string fp_name = 2; //附件名称
            string fp_url = 3; //附件Url
            int64 fp_size = 4; //附件大小
        }
        repeated Attach attaches = 26; //附件
        string pd_repprodcode = 27; //替代料号
        string pd_repdetail = 28; //替代料名称
        string pd_repspec = 29; //替代料规格
        string pr_oldcode = 30; //旧料编号
        string pr_oldname = 31; //旧料名称
        string pr_oldspec = 32; //旧料规格
    }
    repeated PurchaseDetail purchaseDetails = 30; //订单明细
}

//采购订单回复记录
message PurchaseReply {
    int64 pr_id = 1; //erpid
	double pr_qty = 2; //数量
    string pr_delivery = 3; //交货日期
	string pr_remark = 4; //备注
    string pr_pucode = 5; //采购单单号
	int32 pr_pddetno = 6; //采购明细序号
    string pr_date = 7; //回复日期
	string pr_recorder = 8; //回复人
    int64 b2b_pr_id = 9; //b2b_id
	string pr_type = 10; //类型{供应商ERP回复、供应商平台回复、采购主动回复}
}

//买家ERP系统的采购订单明细（针对结案、反结案）
message PurchaseDetailEnd {
    string pd_code = 1; //采购订单单号
	int32 pd_detno = 2; //采购订单明细序号
    int32 pd_ended = 3; //结案状态（是否已结案）
}

//打印记录
message MessageLog {
    int32 ml_id = 1; //id
    string ml_date = 2;  //日期
    string ml_man = 3; //操作人
    string ml_content = 4; //内容
    string ml_result = 5; //结果
    string ml_search = 6; //查找条件
    string code = 7; //对应单据编号
}