syntax = "proto3";

package b2b.erp.order;
option java_multiple_files = true;
option java_package = "com.usoft.b2b.external.erp.order.api.entity";

//ERP系统的客户采购订单变更单
message SaleDownChange {
    int64 b2b_pc_id = 1; //平台客户采购订单变更单id
    string sc_code = 2; //采购变更单号
    string sc_sacode = 3; //采购订单编号
    int64 sc_custuu = 4; //采购变更单所属企业UU
    string sc_indate = 5; //单据录入日期
    string sc_recorder = 6; //录单人
    string sc_newpayments = 7; //新付款方式
    string sc_newcurrency = 8; //新付款币种
    float sc_newrate = 9; //新汇率
    string sc_description = 10; //变更内容描述
    string sc_remark = 11; //备注
    int32 sc_agreed = 12; //卖家是否同意了买家的变更请求(1,0)
    int32 sc_unNeedReply = 13; //不需要供应商确认(1表示不需要确认,0表示需要确认)
    message SaleDownChangeDetail {
        int32 scd_detno = 1; //序号(变更单)
        int32 scd_sddetno = 2;  //采购订单明细序号
        string scd_newcustprodcode = 3; //新物料编号
        string scd_newcustproddetail = 4; //新物料名称
        string scd_newcustprodspec = 5; //新物料规格
        string scd_newcustprodunit = 6; //新物料单位
        double scd_newqty = 7; //新数量
        double scd_newprice = 8; //新含税单价
        float scd_newtaxrate = 9; //新税率
        string scd_newdelivery = 10; //新交货日期
        string scd_remark = 11; //备注
    }
    repeated SaleDownChangeDetail detailList = 14; //明细
}

//采购变更单供应商回复信息
message SaleDownChangeReply {
    int64 b2b_pc_id = 1; //平台采购订单变更单id
    string sc_code = 2; //采购变更单号
    int32 sc_agreed = 3; //供应商是否同意了我的变更请求(1,0)
    string sc_replyremark = 4; //供应商的回复备注
}