syntax = "proto3";

package b2b.erp.order;
option java_multiple_files = true;
option java_package = "com.usoft.b2b.external.erp.order.api.entity";

//客户采购订单
message SaleDown {
    int64 b2b_pu_id = 1; //平台采购订单id
	string sa_code = 2; //采购单单号
    string sa_pocode = 3; //采购单单号
	int64 sa_customeruu = 4; // 客户UU(采购企业UU)
    string sa_custname = 5; // 客户名称(采购企业名称)
	string sa_custcontact = 6; // 客户联系人(采购企业联系人)
    int64 sa_custcontactuu = 7; // 客户联系人UU(采购企业联系人uu)
	string sa_custmobile = 8; //客户联系人手机号(采购企业联系人手机号)
    int64 sa_useruu = 9; //企业业务员UU（供应商联系人uu）
	int64 sa_date = 10; //单据归属日期(时间戳)
    int64 sa_recorddate = 11; //new Date()(时间戳)
	string sa_payments = 12; //付款方式
    string sa_currency = 13; //付款币种
	float sa_rate = 14; //汇率
    string sa_shipby = 15; //收货地址
	string sa_receivename = 16; //应付供应商名称
    string sa_receivecode = 17; //应付供应商编号
	string sa_remark = 18; //备注
    message SaleDownDetail {
        int64 b2b_pd_id = 1; //平台订单明细id
        string sd_code = 2; //订单单号
        int64 sd_detno = 3; //明细序号
        string sd_custprodcode = 4; //物料编号
        string sd_custproddetail = 5; //物料标题
        string sd_custprodspec = 6; //物料规格
        string sd_custprodunit = 7; //物料单位
        int64 sd_delivery = 8; //交货日期(时间戳)
        double sd_replyqty = 9; //回复数量
        int64 sd_replydate = 10; //(最近一次)回复的交期(时间戳)
        string sd_replydetail = 11; //(最近一次)回复的备注
        double sd_price = 12; //加工单价
        double sd_qty = 13; //数量
        double sd_total = 14; //含税金额
        float sd_taxrate = 15; //税率
        double sd_taxtotal = 16; //不含税金额
        string sd_factory = 17; //送货工厂
        string sd_prodsource = 18; //物料路径来源
        string sd_remark = 19; //备注
        string sd_purcvendname = 20; //终端供应商名称
        int64 sd_purcvenduu = 21; //终端供应商uu
        int32 sd_purcdetno = 22; //客户采购订单序号
        string sd_acceptcustname = 23; //收货客户
        string sd_acceptcustaddress = 24; //收货地址
        float sd_SpecPrice = 25; //终端单价
        float sd_SpecTaxRate = 26; //终端税率
        string sd_SpecCurrency = 27; //终端币别
        string sd_prodtaxcode = 28; //客户物料税收分类编码
        string sd_prodbillname = 29; //客户物料开票名称
        string sd_prodorispeccode = 30; //客户物料开票型号
    }
    repeated SaleDownDetail saleDownDetails = 19;
}

//SaleDown明细回复记录
message SaleReply {
    int64 sr_id = 1; //erpid
    double sr_qty = 2; //数量
    int64 sr_delivery = 3; //交货日期(时间戳)
    string sr_remark = 4; //备注
    string sr_sacode = 5; //采购单单号
    int32 sr_sddetno = 6; //采购明细序号
    int64 sr_date = 7; //回复日期(时间戳)
    string sr_recorder = 8; //回复人
    int64 cu_uu = 9;
    int64 b2b_pd_id = 10; //明细id
    int64 b2b_pr_id = 11; //回复id
    string sr_type = 12; //类型{供应商ERP回复、供应商平台回复、采购主动回复}
}

//卖家ERP系统的客户采购订单明细（针对结案、反结案）
message SaleDownDetailEnd {
    int64 b2b_pd_id = 1; //订单明细id
    int64 cu_uu = 2; //采购单所属企业UU
    string sd_code = 3; //采购单号
    int32 sd_detno = 4; //明细序号
    int32 sd_ended = 5; //结案状态（是否已结案）
}